# todo

./: README.md  package-lock.json  package.json  todo.sql  todo.sqlite  vite.config.js
src/: App.vue  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: handler.rs  lib.rs  main.rs  project.rs  snowflake.rs  task.rs
src/components/project/: AddProject.vue  Project.vue  ProjectList.vue
src/components/task/: AddTask.vue  TaskList.vue
