[package]
name = "todo"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open", "windows7-compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.23", features = [
    "formatting",
    "serde",
    "serde-human-readable",
] }
tokio = { version = "1.29.1", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "sqlx-sqlite", "time", "uuid","sqlite"] }
async_static = "0.1.3"
once_cell = "1.18.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
